# a2a

./: .env.example  .gitignore  AGENTS.md  LICENSE  LICENSE-CONTENT  NOTICE  README.md  env.yaml.example  pyproject.toml
.github/workflows/: ci.yml
experiments/2026-05-physical-good/: README.md  config.yaml
experiments/2026-05-saas-subscription/: README.md  config.yaml
site/: astro.config.mjs  package.json  tailwind.config.mjs
site/public/: CNAME
site/src/layouts/: Base.astro
site/src/pages/: index.astro
site/src/styles/: global.css
src/a2a/: __init__.py  cli.py  config.py  exceptions.py  llm.py
src/a2a/buyer/: __init__.py  agent.py  models.py
src/a2a/catalog/: __init__.py  fetcher.py  models.py
src/a2a/protocols/: __init__.py
src/a2a/protocols/a2a_proto/: README.md  bench.py  models.py
src/a2a/protocols/ap2/: README.md  bench.py  models.py
src/a2a/protocols/mcp/: README.md  bench.py  models.py
src/a2a/protocols/ucp/: README.md  bench.py  models.py
src/a2a/protocols/x402/: README.md  bench.py  models.py
src/a2a/reporting/: __init__.py  generator.py
src/a2a/runner/: __init__.py  judge.py  ledger.py  models.py  orchestrator.py
src/a2a/seller/: __init__.py  agent.py  models.py
tests/: __init__.py  conftest.py  test_llm.py
tests/runner/: test_ledger.py  test_orchestrator.py
