[project]
name = "a2a"
version = "0.1.0"
description = "When Both Sides Are Agents: A Versioned Open Benchmark for Agentic E-Commerce."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Anton Chernov", email = "info@chernov.io" }]
keywords = ["agentic", "e-commerce", "llm", "agent-to-agent", "payments", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.2",
    "litellm>=1.40.0",
    "structlog>=24.4.0",
    "rich>=13.7.1",
    "plotly>=5.22.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.3.0",
    "typer>=0.12.0",
    "jinja2>=3.1.4",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "types-pyyaml>=6.0.12",
    "types-beautifulsoup4>=4.12.0",
    "respx>=0.21.0",
]

[project.scripts]
a2a = "a2a.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "ANN",       # flake8-annotations
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "RUF",       # ruff-specific
]
ignore = [
    "B008",    # typer uses function calls in default arguments by design
    "RUF001",  # allow EN DASH in string literals (product descriptions)
    "E501",    # line-length enforced by formatter; some field descriptions intentionally long
    "ANN401",  # Any is legitimate in JSON serialization helpers and settings customisation
    "RUF012",  # class-level list attributes are fine in bench stubs
    "TC001",   # TYPE_CHECKING split not worth it in small modules
    "TC003",   # same
]

[tool.ruff.lint.isort]
known-first-party = ["a2a"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["a2a"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/a2a/runner --cov=src/a2a/llm --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/a2a"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
